Добавил поле status в Post. Изменил фабрику и ресурс. Добавил вывод записей Post по условию. Изменил тест для проверки пагинации.
